CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-27 10:03:39
+lastsearch = 2024-07-27 10:23:30
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Xin chào, tôi ở Đài Loan | Kaohsiung
 url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 12.5%%
+title = Lịch sử Đài Loan
+url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -47,9 +47,9 @@ title = Chương trình phát triển tên lửa của Đài Loan
 url = https://nghiencuuchienluoc.org/chuong-trinh-phat-trien-ten-lua-cua-dai-loan-la-chan-phong-thu-truoc-tham-vong-cua-trung-quoc/
 
 [books.google.com]
-match = -132.0%%
-title = Tuttle English-Vietnamese Dictionary - Page 226 - Google Books Result
-url = https://books.google.com/books?id=57aHCgAAQBAJ&pg=PA226&lpg=PA226&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=j2w1X2D1u9&sig=ACfU3U3tkbTNAx8-6-IyKwk278ltItiUsg&hl=en&sa=X&ved=2ahUKEwjgney05cGHAxXlLkQIHaoGOxUQ6AF6BAgYEAM
+match = -92.0%%
+title = Tuttle Concise Vietnamese Dictionary: Vietnamese-English ...
+url = https://books.google.com/books?id=zbxGCgAAQBAJ&pg=PA606&lpg=PA606&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=5ojVGybNj6&sig=ACfU3U3GxzuhigOPbmkFOJOBIqvzoBlWCg&hl=en&sa=X&ved=2ahUKEwjp-re3osaHAxV3IUQIHeCNB6QQ6AF6BAgXEAM
 
 [cellphones.com.vn]
 match = -52.0%%
