--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-27 04:50:24
+lastsearch = 2024-07-27 10:27:46
 
 [shopee.vn]
 match = -13.8%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 31.0%%
-title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
-url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
+match = -51.7%%
+title = Bán buôn bán lẻ các loại chiếu nhựa... - Chiếu Trúc Việt Nam
+url = https://www.facebook.com/chieutruc.vn/posts/bán-buôn-bán-lẻ-các-loại-chiếu-nhựa-đủ-các-kích-thước-80cm-90cm-1m-1m2-1m5-1m6-1/246703009025205/
 
 [www.sendo.vn]
 match = 0.0%%
@@ -72,14 +72,14 @@ title = Till1' MOI CHAO GIA
 url = https://www.shb.com.vn/wp-content/uploads/2023/04/HSCG-goi-3-Cung-caplap-dat-he-thong-an-toan-kho-quy-SHB-Quang-Binh.pdf
 
 [m.facebook.com]
-match = 13.8%%
-title = Tôi Là Dân Biên Hoà | 💥💥𝗛𝗔̣ 𝟰𝟬𝟬 𝘁𝗿𝗶𝗲̣̂𝘂
-url = https://m.facebook.com/groups/205911244064202/posts/1172102574111726/
+match = 4.3%%
+title = Đông Hưng 24H - Tin Tức
+url = https://m.facebook.com/groups/748325409236575/posts/1666248767444230/
 
 [hxdbinhdinh.org.vn]
-match = -166.7%%
-title = THONG BAO
-url = https://hxdbinhdinh.org.vn/uploads/news/2019_08/tb-pdf-thang-6-2019.pdf
+match = 6.9%%
+title = GIA VAT LIEU lay DUNG THANG 03/2015
+url = https://hxdbinhdinh.org.vn/uploads/news/2017_04/tbgt3.15.pdf
 
 [soxaydung.thaibinh.gov.vn]
 match = -55.2%%
@@ -97,9 +97,9 @@ title = U'iL/ BAN NHAN DAN LONG HOA xA HOI CHU NGHiA ...
 url = https://dinhhoa.thainguyen.gov.vn/documents/241342/1461237/20181207151503.pdf/e30fdba5-1fc0-4053-b54d-8d40b47748de
 
 [kinhtexaydung.gov.vn]
-match = -1350.0%%
-title = S6
-url = https://kinhtexaydung.gov.vn/wp-content/uploads/2023/03/CBG-VLXD-_638058353523574529.pdf
+match = -3.4%%
+title = Gia-VLXD-ninh-thuan-quy-2-nam- ...
+url = https://kinhtexaydung.gov.vn/wp-content/uploads/2021/07/Gia-VLXD-ninh-thuan-quy-2-nam-2020.pdf
 
 [ximang.vn]
 match = -3.4%%
@@ -120,4 +120,24 @@ url = https://vatlieuxaydung.org.vn/Upload/48/Nam_2021/Gia VLXD/Gia VLXD dong na
 match = -44.8%%
 title = Quây cũi nhựa gập gọn Pakey Gấu cao cấp – Bộ 16+2 (2m x ...
 url = https://quaycuichobe.com/quay-cui-nhua-pakey-gau-cao-cap-bo-162-2m-x-2m
+
+[sxd.dongnai.gov.vn]
+match = -51.7%%
+title = A-SSD /SXD-QLXD V/v thong bao ket qua tham djnh thiet ...
+url = https://sxd.dongnai.gov.vn/Shared Documents/4830-SXD-QLXD TBKQ TĐTKCS hệ thống công trình HTKT.pdf
+
+[datafiles.travinh.gov.vn]
+match = -73.3%%
+title = S6: 'L2 /TB-SXD
+url = https://datafiles.travinh.gov.vn/tvh/5098/Giá vật liệu xây dựng/tb-12-sxd-cong-bo-gia-vlxd-thang-12-nam-2023.pdf
+
+[dbnd.daklak.gov.vn]
+match = -44.8%%
+title = Tkr do - H@nh phtic s6: 20 /NQ-HDND flak Lak, ngay dO
+url = https://dbnd.daklak.gov.vn/CMS/Content/KHÓA IX/KH THỨ 8/DL_20_NQ-HDND_10072019.PDF
+
+[dbnd.danang.gov.vn]
+match = -72.4%%
+title = tuyenptm-12/06/2023 10:14:24-tuyenptm-tuyenptm-tuyenptm
+url = https://dbnd.danang.gov.vn/Files/Documents/2023/1. Đính kèm CV 5863 UBND thành phố.PDF
 
