--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-27 09:45:04
+lastsearch = 2024-07-27 10:15:46
 
 [www.galottery.com]
 match = -38.5%%
@@ -432,9 +432,9 @@ title =
 url = https://www.northwestregisteredagent.com/llc/georgia/dissolve
 
 [www.kff.org]
-match = -192.3%%
-title = Status of State Medicaid Expansion Decisions
-url = https://www.kff.org/affordable-care-act/issue-brief/status-of-state-medicaid-expansion-decisions-interactive-map/
+match = -276.9%%
+title = Medicaid Waiver Tracker: Approved and Pending Section ...
+url = https://www.kff.org/medicaid/issue-brief/medicaid-waiver-tracker-approved-and-pending-section-1115-waivers-by-state/
 
 [baslg.com]
 match = 0.0%%
