--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-27 03:30:14
+lastsearch = 2024-07-27 10:32:23
 
 [shopee.vn]
-match = -4.2%%
-title = Thảm lau chân LEN MỊN thấm hút tốt KHỔ 40*60cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-KHỔ-40*60cm-i.241444570.12826821049
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -66.7%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -33.3%%
 title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html
+url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html?srsltid=AfmBOorK0YGSpcDyMEF8f22-nwT9_tiNcQg76kjvjAyqtNGvWVW0QCxr
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -29.2%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
