--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-27 05:19:41
+lastsearch = 2024-07-27 10:19:55
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jennifer Puck, MD
-url = https://profiles.ucsf.edu/jennifer.puck
+match = -80.0%%
+title = Matthew Cooperberg, MD, MPH - UCSF Profiles
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -309,7 +309,7 @@ url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 [profiles.stanford.edu]
 match = -25.0%%
 title = Kevin Schulman - Stanford Profiles
-url = https://profiles.stanford.edu/kevin-schulman
+url = https://profiles.stanford.edu/kevin-schulman?tab=teaching
 
 [publichealth.lacounty.gov]
 match = -155.0%%
