--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-27 09:45:44
+lastsearch = 2024-07-27 10:30:16
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -44,12 +44,12 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html?srslti
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOopH97h6IKBrkMLgrfYfcdM3fRPjOr3NyfWcnkMRFGlXI6Dtsxfi
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong?srsltid=AfmBOoo2n-m9KriI_kGXaslAdcFHqcFhg3LPgJSd8cJxTxq6tU0h9W3n
+url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
 
 [everonvn.com.vn]
 match = 27.8%%
