--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-27 08:02:52
+lastsearch = 2024-07-27 10:27:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -52,9 +52,9 @@ title = Cõi Nhớ " Tiếng Đàn Buồn Chơi Vơi " Khi Lời Ca Lạc Nẻo 
 url = https://www.youtube.com/watch?v=ToTrVLY0o6k
 
 [vi.wikipedia.org]
-match = -50.0%%
-title = Chân Lạc – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Chân_Lạc
+match = -68.8%%
+title = Chuyến bay 370 của Malaysia Airlines
+url = https://vi.wikipedia.org/wiki/Chuyến_bay_370_của_Malaysia_Airlines
 
 [www.lotteria.vn]
 match = 6.2%%
@@ -780,4 +780,9 @@ url = https://www.bigc.vn/store/big-c-mien-dong-25.html
 match = -125.0%%
 title = Nhận bảo hiểm y tế với chương trình Medi-Cal
 url = https://ssa.santaclaracounty.gov/nhan-bao-hiem-y-te-voi-chuong-trinh-medi-cal
+
+[giaoducthoidai.vn]
+match = -193.8%%
+title = Báo Thái Lan sốc trước tin CLB V-League muốn chiêu mộ ...
+url = https://giaoducthoidai.vn/bao-thai-lan-soc-truoc-tin-clb-v-league-muon-chieu-mo-luka-modric-post693330.html
 
