--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-27 06:13:56
+lastsearch = 2024-07-27 10:23:09
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -19,7 +19,7 @@ url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chin
 [cellphones.com.vn]
 match = -212.5%%
 title = Balo laptop | Túi chống sốc kháng nước tốt, mẫu mới cao cấp
-url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html
+url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html?srsltid=AfmBOooVdt88NxSqKlNxeopQvlias37h9RCS2NCRDAYlW1Pd5uQrLjJY
 
 [www.diepxuan.com]
 match = 87.5%%
@@ -107,9 +107,9 @@ title = Tăng "vọt" nhờ thực đơn tăng chiều cao ở tuổi 14 dễ ki
 url = https://midumenaq7.com/thuc-pham-tang-chieu-cao-tuoi-14-n1734.html
 
 [www.facebook.com]
-match = -112.5%%
-title = LÁC SHOP - 𝐄𝐦 𝐌𝐚̂𝐲 | 𝐁𝐒𝐓 “𝐋𝐨̂́𝐢 𝐧𝐡𝐨̉ 𝐇𝐚̀ 𝐍𝐨̣̂𝐢 ...
-url = https://www.facebook.com/story.php/?story_fbid=763269659308273&id=100068757374352
+match = -187.5%%
+title = Việc Tìm Người/ Người Tìm Việc tại San Jose và vùng bay
+url = https://www.facebook.com/groups/188379676145905/
 
 [kenh14.vn]
 match = -193.8%%
