--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-27 09:44:00
+lastsearch = 2024-07-27 10:16:49
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,19 +17,19 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -155.6%%
-title = 𝘿𝙤𝙤𝙯𝙮 𝞖𝙖𝙣𝙤𝙞 (@doozyhanoi) • Instagram photos and videos
-url = https://www.instagram.com/doozyhanoi/?locale=gb
+match = -50.0%%
+title = NEM Furniture JSC (@nemfurniturejsc)
+url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
-match = -161.1%%
-title = Gây nghiện BÚN BÒ NEM NƯỚNG độc lạ nhất Sài Gòn | Gây ...
-url = https://www.facebook.com/DiaDiemAnUong/videos/gây-nghiện-bún-bò-nem-nướng-độc-lạ-nhất-sài-gòn/2080997598594256/
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -38.9%%
-title = Chao Recipe Vietnamese Meatball
-url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
+match = -116.7%%
+title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
 
 [www.youtube.com]
 match = -133.3%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoofyv0l2kqG1LLozoNK3hCNDkbF75h4YEU81DSrzrrzYOzfJL0y
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -111.1%%
-title = Người Việt Bolsa/Orange County | NEM CHUA CHẢ HUẾ
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/nem-chua-chả-huế-2520-cái-chả-huế-mini-65-50-cái-sử-dụng-thịt-heo-tươi-chất-lượn/2894022880748076/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [www.proz.com]
 match = -183.3%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = -144.4%%
-title = interior #furniture #tongthaunoithat #nem #nemfurniture
-url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7048589527807913984-OsM1?trk=public_profile_like_view
+match = 5.6%%
+title = NEM Furniture JSC's Post
+url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
 
 [forum.nameberry.com]
 match = -16.7%%
