CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-27 06:01:38
+lastsearch = 2024-07-27 10:33:07
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -193.8%%
+title = Báo Thái Lan sốc trước tin CLB V-League muốn chiêu mộ ...
+url = https://baomoi.com/bao-thai-lan-soc-truoc-tin-clb-v-league-muon-chieu-mo-luka-modric-c49741536.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -297,9 +297,9 @@ title = Hội Hỗ trợ gia đình liệt sỹ Việt Nam trao tặng 16 xe lă
 url = https://baoxaydung.com.vn/hoi-ho-tro-gia-dinh-liet-sy-viet-nam-trao-tang-16-xe-lan-tai-tinh-yen-bai-378116.html
 
 [cafef.vn]
-match = -225.0%%
-title = Ngắm 'cánh rừng' xanh bạt ngàn trên Đại lộ 7.500 tỷ đồng ...
-url = https://cafef.vn/ngam-canh-rung-xanh-bat-ngan-tren-dai-lo-7500-ty-dong-rong-toi-16-lan-xe-dai-va-dep-bac-nhat-viet-nam-188240627092411707.chn
+match = -256.2%%
+title = Vừa lái ôtô qua cầu, tài xế đã tái mặt vội tìm cách thoát khỏi ...
+url = https://cafef.vn/vua-lai-oto-qua-cau-tai-xe-da-tai-mat-voi-tim-cach-thoat-khoi-xe-canh-tuong-sau-do-khien-ai-cung-hai-hung-18824072707284732.chn
 
 [daidoanket.vn]
 match = -200.0%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -200.0%%
-title = Chống khai thác IUU: Quảng Bình cần tăng cường quản lý ...
-url = https://baochinhphu.vn/chong-khai-thac-iuu-quang-binh-can-som-giai-quyet-cac-tau-ca-3-khong-102240726200346129.htm
+match = -125.0%%
+title = Từ đêm 28/7, Bắc Bộ khả năng xảy ra mưa lớn
+url = https://baochinhphu.vn/tu-dem-28-7-bac-bo-kha-nang-xay-ra-mua-lon-10224072708542553.htm
 
 [eva.vn]
 match = -212.5%%
@@ -587,9 +587,9 @@ title = 6 địa điểm tiêm HPV ở Đà Nẵng uy tín: Giá tiền và các
 url = https://vnvc.vn/dia-diem-tiem-hpv-o-da-nang/
 
 [media.chinhphu.vn]
-match = -231.2%%
-title = Lãnh đạo các nước, các đảng, các tổ chức quốc tế chia buồn ...
-url = https://media.chinhphu.vn/lanh-dao-cac-nuoc-cac-dang-cac-to-chuc-quoc-te-chia-buon-tong-bi-thu-nguyen-phu-trong-tu-tran-102240726214318202.htm
+match = -200.0%%
+title = Truyền thông Cuba dành nhiều không gian tưởng nhớ Tổng ...
+url = https://media.chinhphu.vn/truyen-thong-cuba-danh-nhieu-khong-gian-tuong-nho-tong-bi-thu-nguyen-phu-trong-102240727090334961.htm
 
 [www.quangninh.gov.vn]
 match = -193.8%%
@@ -600,4 +600,14 @@ url = https://www.quangninh.gov.vn/donvi/tpcampha/Trang/ChiTietTinTuc.aspx?nid=2
 match = -156.2%%
 title = Thứ Bảy tuần 16 thường niên. – Lúa và cỏ lùng. ...
 url = https://giaophanlongxuyen.org/tin-tuc/thu-bay-27072024-thu-bay-tuan-16-thuong-nien-lua-va-co-lung.html
+
+[luagaoviet.com]
+match = -112.5%%
+title = Hòa Lạc IEC nhận giấy chứng nhận gạo hữu cơ
+url = https://luagaoviet.com/ban-tin-tren-mang/hoa-lac-iec-nhan-giay-chung-nhan-gao-huu-co
+
+[giaoducthoidai.vn]
+match = -175.0%%
+title = Giá vàng hôm nay 27/7 thế giới lại đảo chiều tăng nhẹ
+url = https://giaoducthoidai.vn/gia-vang-hom-nay-277-the-gioi-lai-dao-chieu-tang-nhe-post693356.html
 
