--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-27 09:54:02
+lastsearch = 2024-07-27 10:40:28
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -72,9 +72,9 @@ title = Bed frame HASLEV 160x200 dark grey - JYSK.vn
 url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey
 
 [blanc.vn]
-match = -81.8%%
-title = Thảm trải sàn Rustic Ghi - có tua rua cotton linen
-url = https://blanc.vn/tham-rustic-ghi-ts
+match = 0.0%%
+title = Thảm trải sàn Jules Kem sợi đay
+url = https://blanc.vn/tham-jules-kem-ts
 
 [noithatkenli.vn]
 match = -27.3%%
