--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-27 01:25:42
+lastsearch = 2024-07-27 10:38:21
 
 [www.tui.co.uk]
 match = -40.0%%
-title = Summer 2025 Cruise Deals
-url = https://www.tui.co.uk/cruise/deals/next-summer
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
 match = 0.0%%
