--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-27 05:49:55
+lastsearch = 2024-07-27 10:39:02
 
 [everon.online]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -12.0%%
-title = Bộ ga chun chần Freesia bốn mùa - Everon
-url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
+match = -24.0%%
+title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
 
 [everonvn.com.vn]
 match = 28.0%%
