--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -7,8 +7,8 @@ lastopen = 2024-06-10 00:50:06
 lastsearch = 2024-07-27 10:15:46
 
 [www.galottery.com]
-match = -38.5%%
-title = Fantasy 5 - Draw Games
+match = -7.7%%
+title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
