--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-27 09:42:39
+lastsearch = 2024-07-27 10:33:49
 
 [demtot.com]
 match = 4.8%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 [demxanh.com]
 match = -52.4%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOooJxxmiCVDKJpSTT3rIWrMp8r6cDsxPWrgF3Jcor8VZAPO8oscY
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 33.3%%
