--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-27 01:24:41
+lastsearch = 2024-07-27 10:44:42
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Ruột nệm Korea 120x190x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 
 [www.riotgames.com]
-match = -84.0%%
-title = Seoul, Korea - Riot Games Global Offices & Job Openings
-url = https://www.riotgames.com/en/work-with-us/offices/seoul
+match = 0.0%%
+title = 
+url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [www.linkedin.com]
 match = -56.0%%
