--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-27 04:53:58
+lastsearch = 2024-07-27 10:34:31
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -20.0%%
-title = Colombians Riot Hard Rock Cafe
-url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
+match = -25.0%%
+title = Trouble Opening Vanguard Account
+url = https://www.tiktok.com/discover/trouble-opening-vanguard-account
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -145.0%%
-title = South Korean 'Crypto Fraudsters' 'Duped Financier Out of ...
-url = https://cryptonews.com/news/south-korean-crypto-fraudsters-duped-financier-out-of-4-1m.htm
+match = -140.0%%
+title = WazirX Hacker Converts Majority of Stolen Assets into Ether
+url = https://cryptonews.com/news/wazirx-hacker-converts-majority-of-stolen-assets-into-ether.htm
 
 [www.thespike.gg]
 match = -85.0%%
