--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -17,9 +17,9 @@ title = Thảm lau chân lông xù hình học thấm nước, chống trượt 
 url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
-match = -66.7%%
-title = Sét 4 Thảm Chùi Chân Họa Tiết 3d Có Đáy Chống Trơn ...
-url = https://tiki.vn/set-4-tham-chui-chan-hoa-tiet-3d-co-da-y-chong-tron-kich-thuo-c-40x60-cm-p177904844.html?spid=177904844
+match = -54.2%%
+title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
+url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
 
 [www.thamminhquang.vn]
 match = 33.3%%
