--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-27 09:54:23
+lastsearch = 2024-07-27 10:49:51
 
 [burningman.org]
 match = -60.0%%
@@ -414,7 +414,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/jhu-2077/overall-rankings
+url = https://www.usnews.com/best-colleges/jhu-2077
 
 [www.spl.org]
 match = -113.3%%
@@ -1050,4 +1050,9 @@ url = https://translate.google.com/
 match = -146.7%%
 title = Hello from nowhere. - Jᴀᴄᴜʀᴜᴛᴜ - Tʜᴇ Cᴀsᴛ Oᴜᴛ
 url = http://www.jacurutu.com/viewtopic.php?t=1449
+
+[www.dclibrary.org]
+match = -160.0%%
+title = Homepage | District of Columbia Public Library
+url = https://www.dclibrary.org/
 
