--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-27 05:32:01
+lastsearch = 2024-07-27 10:50:10
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -12,14 +12,14 @@ title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html?srsltid=AfmBOopHXBoomORpCDlo2KG0-2ArfqHiu3Og_fQT0A-AVBx2-lM7m9GQ
+match = 25.8%%
+title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+match = 8.7%%
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -122,9 +122,9 @@ title = CHĂN GA GỐI ĐỆM HÀN QUỐC 18 - Dodungnoithat.vn
 url = https://dodungnoithat.vn/san-pham/chan-ga-goi-dem-han-quoc-18/
 
 [songhonghanoi.vn]
-match = 19.4%%
-title = Chăn ga gối sông hồng cao cấp Urban UT23027
-url = https://songhonghanoi.vn/chan-ga-goi-song-hong-cao-cap-urban-ut23027.html
+match = 22.6%%
+title = Chăn ga gối sông hồng cao cấp Urban UC22017
+url = https://songhonghanoi.vn/chan-ga-goi-song-hong-cao-cap-urban-uc22017.html
 
 [scandalinen.vn]
 match = 25.8%%
