--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-27 06:54:37
+lastsearch = 2024-07-27 10:44:54
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 18.5%%
+title = chăn ga gối cotton cao cấp Archives
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
 
 [demhong.vn]
 match = 11.1%%
@@ -117,9 +117,9 @@ title = Cotton S (CTS) - Koala
 url = https://koala.vn/chan-ga-goi/koala-cts
 
 [cuahangchangagoidem.com]
-match = -40.7%%
-title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
+match = -25.9%%
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [spacet.vn]
 match = -33.3%%
