--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-27 10:27:27
+lastsearch = 2024-07-27 10:44:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title = Cõi Nhớ " Tiếng Đàn Buồn Chơi Vơi " Khi Lời Ca Lạc Nẻo 
 url = https://www.youtube.com/watch?v=ToTrVLY0o6k
 
 [vi.wikipedia.org]
-match = -68.8%%
-title = Chuyến bay 370 của Malaysia Airlines
-url = https://vi.wikipedia.org/wiki/Chuyến_bay_370_của_Malaysia_Airlines
+match = -50.0%%
+title = Chân Lạc – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Chân_Lạc
 
 [www.lotteria.vn]
 match = 6.2%%
