--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-27 10:37:20
 [www.diepxuan.com]
 match = 35.7%%
 title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOor4nZUjkRL1hJPOepNwRekQ3XCMwFrjOx4Eb5NRSaM9GSKaZ9ul
 
 [shopee.vn]
 match = 32.1%%
