CI images update

--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-27 09:37:01
+lastsearch = 2024-07-27 11:21:56
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 20.8%%
+title = Chiếu Điều Hòa Cao Su Non 3D Mẫu Mới ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Cao-Su-Non-3D-Mẫu-Mới-Chiếu-Cao-Su-Non-Điều-Hòa-Latex-Có-Sẵn-Hàng-3D-Mềm-Mịn-Thoáng-Mát-i.222676090.7081355002
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [sieuthidem.vn]
-match = 50.0%%
-title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
+match = 16.7%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [lybalansieucute.com]
 match = 29.2%%
