--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-27 10:05:24
+lastsearch = 2024-07-27 11:27:12
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 0.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
 match = -28.0%%
@@ -43,13 +43,13 @@ url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
 match = -96.0%%
-title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=jtZMztsEMi&sig=ACfU3U0c2kNGG00nqA37_OL8rwlqTrgFOA&hl=en&sa=X&ved=2ahUKEwjdi8impMWHAxV_tokEHcQtC98Q6AF6BAgWEAM
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=pp6aAAAAIAAJ&pg=RA3-PA70&lpg=RA3-PA70&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=6evoKI6Sqi&sig=ACfU3U3Iy_gynYupyZEpl5MvLhgfzjnZgw&hl=en&sa=X&ved=2ahUKEwi9yPPVsMaHAxVVHEQIHTO_GzYQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
-title = Vé máy bay giá rẻ từ Chicago đến Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/routes/chia/tw/chicago-to-đai-loan.html
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Đà Nẵng
+url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-nang.html
 
 [www.bestprice.vn]
 match = -80.0%%
