--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-27 08:12:06
+lastsearch = 2024-07-27 11:26:51
 
 [shopee.vn]
 match = -137.5%%
@@ -32,9 +32,9 @@ title = Tác dụng của mai rùa với sức khỏe
 url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-mai-rua-voi-suc-khoe-vi/
 
 [www.youtube.com]
-match = 43.8%%
-title = Hướng dẫn móc mai rùa
-url = https://www.youtube.com/watch?v=ze4LsQ50inY
+match = -131.2%%
+title = Rùa bị thối mai: Nguyên nhân và cách chữa | VTC16
+url = https://www.youtube.com/watch?v=kJw_2PB2bN4
 
 [znews.vn]
 match = -125.0%%
