--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 09:50:10
+lastsearch = 2024-07-27 11:23:43
 
 [www.muji.com]
-match = 0.0%%
-title = 
-url = https://www.muji.com/ae/feature/whatismuji/
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -62,9 +62,9 @@ title = Mua Chăn Lông tuyết Muji siêu mềm mịn cao cấp 1,8kg
 url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129.html
 
 [www.muji.us]
-match = -7.1%%
-title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+match = -78.6%%
+title = Women's Loungewear | Cozy Pajamas
+url = https://www.muji.us/collections/womens-loungewear?srsltid=AfmBOorB1Q7zMZ93VjD0tqRUTJgzoo2zupjUCwyYDKFrSHRtYoUfe18T
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -97,9 +97,9 @@ title = sze long chan - cafe&meal muji
 url = https://hk.linkedin.com/in/sze-long-chan-2320561bb
 
 [www.tiktok.com]
-match = 100.0%%
-title = Chăn Lông Muji
-url = https://www.tiktok.com/discover/Chăn-lông-muji
+match = -28.6%%
+title = Muji Pickling Rice Bran
+url = https://www.tiktok.com/discover/muji-pickling-rice-bran
 
 [www.lazada.vn]
 match = -62.5%%
@@ -150,4 +150,9 @@ url = https://www.fastcompany.com/90635837/muji-is-a-beloved-japanese-housewares
 match = -28.6%%
 title = MUJI - AEON MALL Long Biên
 url = https://aeonmall-long-bien-en.com/shop/muji/
+
+[www.uniqlo.com]
+match = -114.3%%
+title = UT Graphic Tees Home Page | UNIQLO US
+url = https://www.uniqlo.com/us/en/special-feature/ut?srsltid=AfmBOopyZ2aDW2h7lTkZtnZwSvKJrmQ3G2VIMUteMbqi6-VH-3F6lRGl
 
