--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-27 10:29:12
+lastsearch = 2024-07-27 11:29:17
 
 [www.youtube.com]
 match = -105.3%%
@@ -292,9 +292,9 @@ title = Fuhu - Mạng xã hội dành cho nhà sáng tạo
 url = https://fuhuq.net/en
 
 [suckhoedoisong.vn]
-match = -121.1%%
-title = Bộ Y tế xác định mã số hàng hóa 14 danh mục thuốc ...
-url = https://suckhoedoisong.vn/bo-y-te-xac-dinh-ma-so-hang-hoa-14-danh-muc-thuoc-nguyen-lieu-lam-thuoc-va-my-pham-169240725143703004.htm
+match = -147.4%%
+title = Bệnh viện Y Dược cổ truyền Quảng Bình có thêm nhiệm vụ ...
+url = https://suckhoedoisong.vn/benh-vien-y-duoc-co-truyen-quang-binh-co-them-nhiem-vu-quan-trong-169240727095510854.htm
 
 [thegioihoa.net]
 match = -89.5%%
