--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-27 05:55:29
+lastsearch = 2024-07-27 11:17:02
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = Set 5 món chiếu điều hòa cao su non kèm chăn thun lạnh ...
+url = https://shopee.vn/Set-5-món-chiếu-điều-hòa-cao-su-non-kèm-chăn-thun-lạnh-chiếu-cao-su-non-trần-tim-chun-cài-4-góc-kèm-chăn-trần-bông-i.217274735.15698688208
 
 [olbedding.com]
 match = 11.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [giadunganhvan.vn]
 match = 48.0%%
