--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-27 10:47:21
+lastsearch = 2024-07-27 11:31:49
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -226.7%%
+title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
+url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
 
 [quangharvest.com]
 match = -186.7%%
@@ -222,9 +222,9 @@ title = Thánh Lễ 2024 tại CĐ Th. Giuse Khang - Hamburg
 url = http://www.mucvu-borsum.de/?muc=a&g1=204&ba=1&b1=28&b2=0&b3=14&ca=1&c1=91&c2=0&c3=0&da=1&d1=0&d2=0&d3=0
 
 [www.tiktok.com]
-match = -246.7%%
-title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
+match = -153.3%%
+title = Seventeen Caratland 2024 Cheers to Youth Full
+url = https://www.tiktok.com/discover/seventeen-caratland-2024-cheers-to-youth-full
 
 [vinhphuc.gov.vn]
 match = -180.0%%
