--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-27 10:44:21
+lastsearch = 2024-07-27 11:20:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -30.4%%
 title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
-url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html?srsltid=AfmBOorLw_mSYX0rs4XCeGCASZb0rhZzWw0ngBBPQy79Wv52ncVcSYDQ
+url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -259,7 +259,7 @@ url = https://vnrack.vn/
 [www.lazada.vn]
 match = -43.5%%
 title = Chiếu Mây Điều Hòa, Chiếu trúc Không Mát Bằng ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-truc-khong-mat-bang-chieu-huong-dieu-hoa-chieu-ngu-mua-he-16-m-i717202773.html?srsltid=AfmBOopel9Z2igHEicJJ21njFmkgg1AGjbnkC3xOd8gpfwd5Mlrevz-j
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-truc-khong-mat-bang-chieu-huong-dieu-hoa-chieu-ngu-mua-he-16-m-i717202773.html
 
 [www.tuyensinh.dau.edu.vn]
 match = -104.3%%
