--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-27 10:24:58
+lastsearch = 2024-07-27 11:31:07
 
 [dongagroup.vn]
 match = -272.7%%
@@ -57,9 +57,9 @@ title = Combo giường tủ 2m
 url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 
 [ifurni.vn]
-match = 0.0%%
-title = Giường bọc nệm HELEN 2
-url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
+match = -18.2%%
+title = Giường bọc nệm JULIANA 2
+url = https://ifurni.vn/san-pham/giuong-boc-nem-juliana-2-2433.html
 
 [shopee.vn]
 match = -263.6%%
@@ -117,9 +117,9 @@ title = Wgm yura legendado [OZVilB]
 url = https://www.nitrc.org/links/?group_id=51&url=https://detsad147vrn.ru/27146399zfe43a
 
 [www.airbnb.com.vn]
-match = -272.7%%
-title = Cabin phong cách Red Barn với giường tầng - Airbnb
-url = https://www.airbnb.com.vn/rooms/52426653
+match = -309.1%%
+title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/929459059736966278
 
 [vn.trip.com]
 match = -281.8%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -272.7%%
-title = Country Inn & Suites by Radisson, Shoreview, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-shoreview.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
