--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-27 09:54:43
+lastsearch = 2024-07-27 11:24:44
 
 [screenrant.com]
 match = 0.0%%
@@ -63,8 +63,8 @@ url = https://www.greenplan.gov.sg/
 
 [www.dienmayxanh.com]
 match = -242.9%%
-title = Màn hình máy tính PC uy tín chính hãng, giá rẻ | BH 3 năm
-url = https://www.dienmayxanh.com/man-hinh-may-tinh
+title = Top 10 tivi giá rẻ dưới 8 triệu đáng mua nhất 2024 tại ...
+url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-tivi-man-hinh-phang-duoi-4-trieu-881469
 
 [dienthoaivui.com.vn]
 match = -207.1%%
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = -92.9%%
