--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-27 10:31:20
+lastsearch = 2024-07-27 11:15:38
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiMElq5&sig=ACfU3U0xV1jmhY0VgRttWi29bHuU_zLpPg&hl=en&sa=X&ved=2ahUKEwj3iryXpMaHAxX3HkQIHXyvGMgQ6AF6BAgbEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiMGsld&sig=ACfU3U3e2qoWCknmuHHJcPlIT_y0wyYAaA&hl=en&sa=X&ved=2ahUKEwiY7vOKrsaHAxWnLUQIHWNJIRQQ6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
