--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-27 09:41:10
+lastsearch = 2024-07-27 11:21:16
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = 33.3%%
-title = NEM CHUA THANH HÓA
-url = https://www.facebook.com/NemChuaHaiAu/posts/𝐄𝐦-𝐱𝐢𝐧-𝐩𝐡𝐞́𝐩-𝐧𝐡𝐚̣̂𝐧-𝐝̵𝐚̣̆𝐭-𝐥𝐢̣𝐜𝐡-𝐍𝐞𝐦-𝐂𝐡𝐮𝐚-𝐀̆𝐧-𝐓𝐞̂́𝐭-𝐃̵𝐢-𝐁𝐢𝐞̂́𝐮-𝟐-𝟑-𝐧𝐠𝐚̀𝐲-𝐧𝐮̛̃𝐚-𝐭/789016583270704/
+match = -161.1%%
+title = ‼️ Tụ điểm "BÁNH XÈO NAM BỘ - NEM LỤI - ĐỒ ĂN VẶT chỉ ...
+url = https://www.facebook.com/anuongtaithanhhoa/videos/️-tụ-điểm-bánh-xèo-nam-bộ-nem-lụi-đồ-ăn-vặt-chỉ-từ-30k-ngay-50b-triệu-quốc-đạt-m/1219756859406844/
 
 [thegioinem.com]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -161.1%%
+title = Quay lại NEM NƯỚNG ĐÀ LẠT - BÉ... - Địa điểm ăn uống ...
+url = https://m.facebook.com/story.php/?story_fbid=763585472473204&id=100064652743390
 
 [lanchi.vn]
 match = -38.9%%
