CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-27 04:56:04
+lastsearch = 2024-07-27 11:36:36
 
 [silverwow.net]
 match = -255.6%%
@@ -62,9 +62,9 @@ title = Mikawaya Edomae Toro-chan 6.6 lbs (3 kg) (500 g) x 6 Packs ...
 url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B01APABNVO
 
 [unistrutohio.com]
-match = -466.7%%
-title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001
+match = -511.1%%
+title = Unistrut P1000 - 1-5/8" x 1-5/8", 12 Gauge Channel, Metal ...
+url = https://unistrutohio.com/products/p1000
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -132,9 +132,9 @@ title =
 url = https://m.indiamart.com/proddetail/mild-steel-c-channel-21330745648.html
 
 [www.amazon.com]
-match = -366.7%%
-title = Maruchan Ramen Chicken, Instant Ramen Noodles ...
-url = https://www.amazon.com/Maruchan-Ramen-Chicken-3-0-Pack/dp/B07222R3Y5
+match = -344.4%%
+title = Tees Factory KG-5542671HK Koguma-chan Mini ...
+url = https://www.amazon.com/Factory-KG-5542671HK-Koguma-chan-Character-Basket/dp/B0BW2HGFKD
 
 [www.robe.cz]
 match = -366.7%%
@@ -187,9 +187,9 @@ title =
 url = https://brainly.in/question/32900234
 
 [www.instagram.com]
-match = -288.9%%
-title = Wallace Chan (@wallacechanart) - Instagram
-url = https://www.instagram.com/wallacechanart/?hl=en
+match = -444.4%%
+title = alldan chan | W1 Squat: 200 KG X 3 Bench : 135 KG Deadlift
+url = https://www.instagram.com/p/C8JmTImSYM5/
 
 [sdzssteel.en.made-in-china.com]
 match = 0.0%%
