--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-27 10:51:37
+lastsearch = 2024-07-27 11:39:37
 
 [www.youtube.com]
 match = -72.7%%
@@ -43,8 +43,8 @@ url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuy
 
 [books.google.com]
 match = -96.0%%
-title = Địa chí Tiền Giang - Volume 2 - Page 921 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=jtZLIApyHo&sig=ACfU3U0T1Skefu0MpM24YVqUTVfjHotMhQ&hl=en&sa=X&ved=2ahUKEwie_vj7psSHAxVmg4kEHZydCKcQ6AF6BAgYEAM
+title = Địa chí Tiền Giang - Volume 1 - Page 921 - Google Books Result
+url = https://books.google.com/books?id=bqQMAQAAMAAJ&pg=PA921&lpg=PA921&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=31IpjKneRt&sig=ACfU3U3UmZY2XYdQVOjv7UBPyM0o2EDzjg&hl=en&sa=X&ved=2ahUKEwjRppS5s8aHAxUCCnkGHRV-CqsQ6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -60.0%%
