--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-27 10:31:43
+lastsearch = 2024-07-27 11:37:39
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -12,9 +12,9 @@ title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = -40.6%%
+title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
+url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -65,4 +65,14 @@ url = https://thegioidemdep.com/dem-bong-ep-dreamland/
 match = -10.5%%
 title = Nệm Foam chính hãng
 url = https://nemgiakho.com/nem-foam
+
+[thegioidemonline.com]
+match = -9.4%%
+title = Xả kho thanh lý chăn ga gối đệm tháng 8.2022
+url = https://thegioidemonline.com/xa-kho-thanh-ly-chan-ga-goi-dem-thang-82022.html
+
+[www.emag.hu]
+match = -50.0%%
+title = Best Sleep Vitalitás Bambusz Ortopéd Matrac 12 + 2 + 6, ...
+url = https://www.emag.hu/best-sleep-vitalitas-bambusz-ortoped-matrac-12-2-6-200x180x20-cm-poliuretanhab-memoriaval-es-kokuszrosttal-hipoallergen-antibakterialis-leveheto-huzat-bambusz-szalakkal-kozepes-szilardsagu-59492800430/pd/D9C4DNMBM/
 
