--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-27 05:29:41
+lastsearch = 2024-07-27 11:54:43
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOorgJXKC1aMfsnnahv6TMJO5RO7y6AoLnTfXrthUPaZFCwN4aVJM
+url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
 match = -240.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOoqJIj9f6MPdeJvFp36_vu4JE_8oQP_RpUh8MNInbcqENXhlITHG
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
