--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-27 08:06:01
+lastsearch = 2024-07-27 11:48:26
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -102,9 +102,9 @@ title = Đã 16 ngày không ghi nhận ca mắc mới COVID-19 ở cộng ...
 url = https://baolamdong.vn/xahoi/202009/da-16-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-cong-dong-viet-nam-tai-khoi-dong-nhieu-duong-bay-quoc-te-3022510/
 
 [afhanoi.com]
-match = -85.7%%
-title = [Tuần Lễ Vàng 2024] Miễn phí 100%% 15 ca Thụ tinh trong ống ...
-url = https://afhanoi.com/tuan-le-vang-2024-mien-phi-15-ca-thu-tinh-trong-ong-nghiem-ivf-19-04-19-05-2024/
+match = -10.7%%
+title = Đến Tuần Lễ Vàng Nhận Ngay Combo Quà Tặng
+url = https://afhanoi.com/den-tuan-le-vang-nhan-ngay-combo-qua-tang/
 
 [archive.org]
 match = 14.3%%
@@ -305,4 +305,9 @@ url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 match = 8.3%%
 title = Tam Quốc Chí -Ngụy Thư 1
 url = https://nguyensongviet3979.blogspot.com/2019/12/tam-quoc-chi-tap-1-1.html
+
+[dongduongtravel.com]
+match = -46.4%%
+title = Chùa Hương Tích - Đền Mẫu Liễu Hạnh - Mộ Đại tướng Võ ...
+url = https://dongduongtravel.com/?x=342/du-lich-trong-nuoc/chua-huong-tich-den-mau-lieu-hanh-mo-dai-tuong-vo-nguyen-giap-dong-thien-duong
 
