--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-27 11:17:44
+lastsearch = 2024-07-27 11:46:00
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 42.4%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoon0NcpSnGlijTu9rIiu3ikwEiLp_ebWokQoLvssI6ktu8_wRMH
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -78,8 +78,8 @@ url = https://khonemthangloi.com/san-pham/chieu-truc-lan-lan-khong-vien-mau-den/
 
 [www.toangiaphuc.vn]
 match = 54.8%%
-title = Chiếu trúc hạt nâu viền vải 1m8
-url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m8.html
+title = Chiếu trúc hạt nâu viền vải 1m6
+url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m6.html
 
 [ru9.vn]
 match = -18.2%%
