--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-27 10:22:03
+lastsearch = 2024-07-27 11:55:24
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -22,8 +22,8 @@ title = đệm bông ép Dreamland chống thoái hóa cột sống
 url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
-match = -38.7%%
-title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
+match = -21.1%%
+title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
