--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-27 09:00:13
+lastsearch = 2024-07-27 11:59:54
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://everonhn.com.vn/tam-trai-da-nang-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOoqImJaFaTl3iPzh-EnCgJ1eqBnRlJS_y3_fsoPhH4V5iwJzHvwO
 
 [everon.com]
 match = -113.6%%
@@ -52,8 +52,8 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -109.1%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên) - K-Bedding
+match = -54.5%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
 url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [dailyeveron.vn]
