--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-27 10:49:06
+lastsearch = 2024-07-27 11:50:50
 
 [xoptraisan.info]
 match = -147.4%%
@@ -17,9 +17,9 @@ title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
 url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
-match = 5.3%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 26.3%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
@@ -32,14 +32,14 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [thamtretho.com]
-match = -36.8%%
-title = Thảm xốp cho bé hình cỏ (60 x 60cm x 9mm)
-url = https://thamtretho.com/tham-co
+match = 37.5%%
+title = Thảm xốp 60x60cm
+url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
-match = -73.7%%
-title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
-url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
+match = -52.6%%
+title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
+url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [tiki.vn]
 match = -94.7%%
