--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-27 08:13:27
+lastsearch = 2024-07-27 12:27:54
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
-url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
+match = 31.2%%
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -472,7 +472,7 @@ title = Bộ cờ lê đảo chiều lắc léo 8 chi tiết 8-19mm YATO YT-1696
 url = https://yato.vn/bo-co-le-vong-mieng-lac-leo-dao-chieu-8-chi-tiet-8-19mm-yato-yt-16967-p13897
 
 [vi.wikipedia.org]
-match = -56.2%%
-title = Hồ Tây – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Hồ_Tây
+match = 0.0%%
+title = Trần Thị Thanh Thúy
+url = https://vi.wikipedia.org/wiki/Trần_Thị_Thanh_Thúy
 
