--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-27 10:25:42
+lastsearch = 2024-07-27 12:24:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -625,4 +625,9 @@ url = https://baocaovien.vn/tin-tuc/thai-binh-chay-xuong-san-xuat-bat-lua-gas-12
 match = -76.2%%
 title = Mưa lũ gây thiệt hại nặng, giao thông ách tắc
 url = https://www.sggp.org.vn/mua-lu-gay-thiet-hai-nang-giao-thong-ach-tac-post751058.html
+
+[aeonmall-binhtan.com.vn]
+match = 0.0%%
+title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
+url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
