--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-27 08:08:00
+lastsearch = 2024-07-27 12:21:03
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOopsIHThPfKzSaIetcMehSgoZe3LtHZgPqqcW1OVhn3eq0g8LmNu
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOopT4FU0Qi7KW27NuqTCktfceC9m_Ut4BtWcBZNhlDbtj_FYIeSo
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOooWBDdtzosGP9uvuwFjMlDNGcyap5o_enn7Wnero5y5Nm2TrsqH
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOortW6NkCgo2oJ09oV13zDqY5ehaV5dV5aUPsbm8DRdeBSiHLRr0
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOop7VWotoOLqv0J0cA43c3A61BPFfUfKFvyOo7tAAAFMvPn7T_6e
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOor6YCKCNs0LfhcafO2vCIPQjfFOyWvw8MY8BDWmuX4zEYJGEw6d
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -104,12 +104,12 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOopmcGIWSi5AoCyR0ebEOht9_HF1jjWUbyUlTi_WqVOpRPMrbsyF
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOopIt3DWgTs60XO5zH9tJ6BtLM6ha92kkAK5BB5U-cj7xmC8nyg8
 
 [theonenoithat.com]
 match = -30.0%%
@@ -239,7 +239,7 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOoqom6UtuBAbXLdRyhrT4FvMer759bbqYxUbc9ePqmugMyc_ob_2
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOoqUVRgn9SMp3OPrWF_IZVcL2LFlRbu3_qPmWUDSmBzBrG9zvLJT
 
 [giuonggapvietnhat.vn]
 match = -50.0%%
