--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-27 11:58:32
+lastsearch = 2024-07-27 12:19:35
 
 [everon.online]
 match = 19.2%%
@@ -77,9 +77,9 @@ title = Anno 1800 - Steampunk Pack
 url = https://store.steampowered.com/app/2830580/Anno_1800__Steampunk_Pack/?l=vietnamese&snr=1_wishlist_4__wishlist-capsule
 
 [vi.wikipedia.org]
-match = -23.1%%
-title = Nguyễn Phúc Nguyên – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Nguyễn_Phúc_Nguyên
+match = -3.8%%
+title = San Diego – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/San_Diego
 
 [baocaotaichinh.vn]
 match = -19.2%%
@@ -362,7 +362,7 @@ title = ATLANTIC COUNTY - NJ.gov
 url = https://nj.gov/treasury/unclaimed-property/pdf/newspaper-2022/Atlantic.pdf
 
 [www.gso.gov.vn]
-match = 3.8%%
-title = Luật thống kê số 89/2015/QH13
-url = https://www.gso.gov.vn/wp-content/uploads/2019/11/Luật-thống-kê.pdf
+match = -30.8%%
+title = Sách trắng doanh nghiệp Việt Nam 2022 (.pdf)
+url = https://www.gso.gov.vn/wp-content/uploads/2022/11/Sach-trang-DN-2022.pdf
 
