--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-27 11:32:49
+lastsearch = 2024-07-27 12:22:45
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOoqrhpWc5Hl1FRHTu6MrHkEEG4V-TsFIG28L6fUy1lxIqjshSVUY
 
 [www.youtube.com]
-match = -133.3%%
-title = Trung Quốc phát cảnh báo cao nhất đối phó siêu bão Gaemi ...
-url = https://www.youtube.com/watch?v=orW_6gF1NN8
+match = -114.3%%
+title = Sau thảm họa khiến 14 người thiệt mạng, Đài Loan lại rung ...
+url = https://www.youtube.com/watch?v=r4AG_gr4m3o
 
 [roc-taiwan.org]
 match = -66.7%%
