--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-27 11:26:10
+lastsearch = 2024-07-27 12:37:48
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -205,4 +205,9 @@ url = https://www.erav.vn/tin-tuc/t36669/evngenco1-chu-dong-trien-khai-nhieu-gia
 match = -25.0%%
 title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
+
+[www.quangninh.gov.vn]
+match = -33.3%%
+title = Hiệp hội doanh nghiệp Thành phố và Chi ...
+url = https://www.quangninh.gov.vn/donvi/tpcampha/Trang/ChiTietTinTuc.aspx?nid=26684
 
