--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-27 05:26:12
+lastsearch = 2024-07-27 12:43:57
 
 [bedding.vn]
 match = -123.1%%
@@ -177,8 +177,8 @@ title = Events | Center for Language, Interaction, and Culture - UCLA
 url = https://clic.ss.ucla.edu/speakers/
 
 [med.uc.edu]
-match = -184.6%%
-title = James P. Herman, PHD - UC College of Medicine
+match = -284.6%%
+title = James P. Herman, PHD - College of Medicine | UC Cincinnati
 url = https://med.uc.edu/about/depart-chairs/faculty-profile/Index/Pubs/hermanjs
 
 [heds-center.llnl.gov]
