--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-17 21:09:12
 lastsearch = 2024-07-27 12:25:51
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
 match = -4.5%%
