--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-27 11:18:45
+lastsearch = 2024-07-27 13:00:17
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = 16.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -92.0%%
+title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
+url = https://www.facebook.com/ptsvietnamesenews/
 
 [vi.wikipedia.org]
 match = 12.5%%
