--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-27 11:25:49
+lastsearch = 2024-07-27 12:59:56
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=mscki_o4aGM
 [books.google.com]
 match = -156.2%%
 title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNlgio80&sig=ACfU3U129GqjYodJMn1kzMLTHQttQdwNXA&hl=en&sa=X&ved=2ahUKEwjVnryusMaHAxVyLUQIHXhWMG8Q6AF6BAgcEAM
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNlgnuc7&sig=ACfU3U2P66tDDK1704oA_yJhcv5qGcfyPA&hl=en&sa=X&ved=2ahUKEwimkJmzxcaHAxX2q4kEHa4JAdUQ6AF6BAgcEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
