--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-27 10:49:28
+lastsearch = 2024-07-27 12:55:46
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -152.9%%
-title = Records and Briefs of the United States Supreme Court
-url = https://books.google.com/books?id=L1hBAAAAYAAJ&pg=RA10-PA5&lpg=RA10-PA5&dq=man+in+hoa+dep+16&source=bl&ots=OgCtG65o4j&sig=ACfU3U2Hz3Q59UK9tWORMbAShGfz3NIvJQ&hl=en&sa=X&ved=2ahUKEwjAj5eeqMaHAxUEKEQIHTAZME0Q6AF6BAgcEAM
+match = -217.6%%
+title = Department of State News Letter - Page 50 - Google Books Result
+url = https://books.google.com/books?id=D4ZNAQAAMAAJ&pg=RA2-PA50&lpg=RA2-PA50&dq=man+in+hoa+dep+16&source=bl&ots=W-IIRJMqN7&sig=ACfU3U2GSfXxyVqwXlI84-KFQBSqfkod1g&hl=en&sa=X&ved=2ahUKEwicksy7xMaHAxUKrYkEHdgHC2sQ6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
