--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-27 10:18:13
+lastsearch = 2024-07-27 13:01:22
 
 [www.gov.uk]
 match = -200.0%%
@@ -1055,4 +1055,9 @@ url = https://www.bestcolleges.com/schools/coe-college/
 match = 0.0%%
 title = 
 url = https://www.theverge.com/24126502/humane-ai-pin-review
+
+[translate.google.com]
+match = 33.3%%
+title = Google Translate
+url = https://translate.google.com/
 
