--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-27 01:35:08
+lastsearch = 2024-07-27 12:56:51
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -64.0%%
-title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
-url = https://demxanh.com/
+match = -44.0%%
+title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
 
 [khodem.vn]
 match = 24.0%%
@@ -112,9 +112,9 @@ title = Ruột gối - Everhome
 url = https://demeverhome.com/san-pham/ruot-goi/
 
 [thegioidemonline.com]
-match = 4.0%%
-title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html
+match = -56.0%%
+title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html
 
 [thegioidemdep.com]
 match = -24.0%%
