--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-11 23:30:16
 lastsearch = 2024-07-27 12:45:56
 
 [www.riotgames.com]
-match = -84.0%%
-title = Seoul, Korea - Riot Games Global Offices & Job Openings
-url = https://www.riotgames.com/en/work-with-us/offices/seoul
+match = 0.0%%
+title = 
+url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [en.wikipedia.org]
 match = 0.0%%
